# zdc_prototype

./: CMakeLists.txt  make_nlayers.sh  run_sim.sh  scan_nlayers.sh  setup_env.sh  zdc_prototype.xml  zdc_prototype_2pt0.xml  zdc_prototype_xml_template
macros/: Al27_56_GeV.mac  C12_56_GeV.mac  Ca40_56_GeV.mac  Fe56_56_GeV.mac  e+_4_GeV.mac  mu-_2_GeV.mac  proton_2_GeV.mac
src/: ZeroDegreeCalorimeterSiPMonTile_geo.cpp
